fix computer cards bugs

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <div class="container__right">
       <div class="card-box__container">
-        <div class="card-box framed" id="enemy-cards"></div>
+        <div class="card-box framed" id="computer-cards"></div>
 
         <div class="card-versus">
           <div class="versus-top">
