--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <title>Document</title>
 </head>
 <body>
-    <header class="header">
+    <header class="banner">
         <h1>Yugi-Oh!</h1>
-        </nav>
+    </header>
 
     <main class="board">
         <div class="bg-video">
