Update index.html and engine.js, and add styles to main.css

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <div class="card-box framed" id="computer-cards">
 
                     </div>
-                    <div class="card-versus">
+                    <div class="card-versus__container">
                         <div class="versus-top">
                             <div class="card-infield">
                                 <img id="player-field-card" height="180px" width="125px" alt="Carta do jogador no campo">
