--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="./src/styles/main.css">
     <link rel="stylesheet" href="./src/styles/containers_and_frames.css">
     <link rel="stylesheet" href="./src/styles/buttons.css">
-    <title>Document</title>
+    <title>Yugi-Po!</title>
 </head>
 <body>
-    <header class="banner">
-        <h1>Yugi-Oh!</h1>
+    <header class="banner framed-golden">
+        <h1>Yugi-Po: The Ultimate Yugi-Oh Rock-Paper-Scissors Game!</h1>
     </header>
 
     <main class="board">
@@ -24,33 +24,55 @@
         </div>
 
         <section class="container">
-            <aside class="container__left">
-                <div class="score_box">
-                    <span id="score_points">Win: 0 | Lose: 0</span>
+            <aside class="container__left framed-golden-2">
+                <div class="score_box frame">
+                    <span id="score_points"><strong>Win :</strong> 0 <strong>Lose:</strong> 0</span>
                 </div>
                 <div class="menu_avatar">
                     <img alt="" id="card-image" />
                 </div>
-                <div class="card_details">
-                    <p id="card-name"></p>
+                <div class="card_details frame">
+                    <p id="card-name">Select a card.</p>
                     <p id="card-type"></p>
                 </div>
             </aside>
             <article class="container__right">
-                <div class="card-box">
+                <div class="card-box__container">
+                    <div class="card-box framed" id="computer-cards">
 
+                    </div>
+                    <div class="card-versus__container">
+                        <div class="versus-top">
+                            <div class="card-infield">
+                                <img id="player-field-card" height="180px" width="125px" aria-label="Carta do jogador no campo">
+                            </div>
+                            <img src="./src/assets/icons/millenium2.png" height="100px" alt="">
+                            <div class="card-infield">
+                                <img id="computer-field-card" height="180px" width="125px" aria-label="Carta do computador no campo">
+                            </div>
+                        </div>
+                        <div class="versus-bottom">
+                            <button class="rpgui-button" id="next-duel" onclick="resetDuel()">GANHOU</button>
+                        </div>
+                    </div>
+                    <div class="card-box framed" id="player-cards">
+                        
+                    </div>
                 </div>
             </article>
         </section>
 
     </main>
 
-    <footer class="social-media">
+    <footer class="social-media framed-golden-2">
         <p class="social-media__message">&copy; 2023 - Juliana Chaves Palm</p>
-            <ul class="social-media__adresses">
-                <li><a href="https://www.linkedin.com/in/julianachavespalm" class="social-media__link" title="Linkedin" aria-label="Linkedin"><i class="fa-brands fa-linkedin" aria-disabled="true"></i></a></li>
-                <li><a href="www.github.com/julianachavespalm" class="social-media__link" title="Github" aria-label="Github"><i class="fa-brands fa-github-alt" aria-disabled="true"></i></a></li>
-            </ul>
+        <ul class="social-media__adresses">
+            <li><a href="https://www.linkedin.com/in/julianachavespalm" class="social-media__link" title="Linkedin" aria-label="Linkedin"><i class="fa-brands fa-linkedin" aria-disabled="true"></i></a></li>
+            <li><a href="www.github.com/julianachavespalm" class="social-media__link" title="Github" aria-label="Github"><i class="fa-brands fa-github-alt" aria-disabled="true"></i></a></li>
+        </ul>
+        <audio id="bgm" loop>
+            <source src="./src/assets/audios/egyptian_duel.mp3" type="audio/mp3" />
+        </audio>
     </footer>
 
     <script src="https://kit.fontawesome.com/e0954b0c75.js" crossorigin="anonymous"></script>
